feat(frontend): Creado componente de rating para uso futuro
fix(frontend): Solucionados hardcodeos de código SCSS